--- a/zambl_weather/pubspec.yaml
+++ b/zambl_weather/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  json_annotation: 4.5.0
+
 dev_dependencies:
+  build_runner: 2.1.11
+  json_serializable: 6.2.0
   flutter_test:
     sdk: flutter
 
