--- a/zambl_weather/pubspec.yaml
+++ b/zambl_weather/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: any
 
   json_annotation: 4.5.0
+
 
 dev_dependencies:
   build_runner: 2.1.11
